<resources>
    <string name="app_name">BabyListApp-MissionAndroid1.2.4</string>
    <string name="drop_table">\" DROP TABLE IF EXISTS \"</string>
    <string name="quantity">Quantity :</string>
    <string name="color">Color :</string>
    <string name="item">Item :</string>
    <string name="size">Size :</string>
    <string name="added_on">Added On :</string>
    <string name="update_button">update button</string>
    <string name="delete_button">delete button</string>
    <string name="action_setting">Setting</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_baby_item_name">Enter Baby Item Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_color">Enter Color</string>
    <string name="enter_size">Enter Size</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="edit_details">Edit Details</string>
    <string name="update">Update</string>
</resources>
