<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorCard"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/titleEnterDetails_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_details"
                android:textColor="@color/colorBackground_Text"
                android:textSize="21sp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/babyItemName_editText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/titleEnterDetails_textView"
                android:textColor="@color/colorBackground_Text"
                android:textSize="18sp"
                android:textColorHint="@color/colorBackground_Text"
                android:hint="@string/enter_baby_item_name"
                android:inputType="text"
                android:autofillHints="no"/>

            <EditText
                android:id="@+id/quantity_EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/babyItemName_editText"
                android:textColor="@color/colorBackground_Text"
                android:textSize="18sp"
                android:textColorHint="@color/colorBackground_Text"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:autofillHints="no"
                />

            <EditText
                android:id="@+id/color_EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/quantity_EditText"
                android:textColor="@color/colorBackground_Text"
                android:textSize="18sp"
                android:textColorHint="@color/colorBackground_Text"
                android:hint="@string/enter_color"
                android:inputType="number"
                android:autofillHints="no"
                />

            <EditText
                android:id="@+id/size_EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/color_EditText"
                android:textColor="@color/colorBackground_Text"
                android:textSize="18sp"
                android:textColorHint="@color/colorBackground_Text"
                android:hint="@string/enter_size"
                android:inputType="number"
                android:autofillHints="no"
                />

            <Button
                android:id="@+id/saveButton_Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/size_EditText"
                android:text="@string/save"
                android:background="@color/colorButtonUpdate"
                android:textSize="21sp"/>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>