<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground_Text"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBabyItem_cardView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="3dp"
        app:contentPadding="5dp"
        app:cardUseCompatPadding="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rootTitleBabyItem_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical|end"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="21sp"
                    android:text="@string/item"
/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="21sp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/quantity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="21sp"
                    android:text="@string/color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="21sp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="21sp"
                    android:text="@string/added_on"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/rootBabyItem_textView"
                android:layout_toEndOf="@id/rootTitleBabyItem_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                >

                <TextView
                    android:id="@+id/item_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/colorBackground_Text"
                    android:textSize="21sp"
                    android:text=""
                    />

                <TextView
                    android:id="@+id/quantity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/colorBackground_Text"
                    android:textSize="21sp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text=""/>

                <TextView
                    android:id="@+id/color_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/colorBackground_Text"
                    android:textSize="21sp"
                    android:text=""/>

                <TextView
                    android:id="@+id/size_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/colorBackground_Text"
                    android:textSize="21sp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text=""/>

                <TextView
                    android:id="@+id/dateAddedOn_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/colorBackground_Text"
                    android:textSize="21sp"
                    android:text=""/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/update_imageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/update_icon"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorButtonUpdate"
                    android:elevation="2dp"
                    android:translationZ="6dp"
                    android:contentDescription="@string/update_button"/>

                <ImageButton
                    android:id="@+id/delete_imageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/delete_icon"
                    android:background="@color/colorButtonDelete"
                    android:elevation="2dp"
                    android:translationZ="6dp"
                    android:contentDescription="@string/delete_button"
                    />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>