<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorCard">

            <TextView
                android:id="@+id/confirmation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_you_want_to_delete"
                android:textSize="21sp"
                android:layout_marginTop="25dp"
                android:textColor="@color/colorBackground_Text"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmation_textView"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:weightSum="2">

            <Button
                android:id="@+id/confirmYes_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="3dp"
                android:background="@color/colorButtonUpdate"
                android:text="@string/yes"
                android:textColor="@color/colorBackground_Text"/>
            <Button
                android:id="@+id/confirmNo_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="7dp"
                android:background="@color/colorButtonDelete"
                android:text="@string/no"
                android:textColor="@color/colorBackground_Text"/>
        </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>